--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,7 @@
 }
 
 body{
+    justify-content: center;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,6 +16,9 @@ body{
     height: 100vh;
     z-index: 0;
     background: rgb(255, 255, 255);
+    background-image: url(/img/Design\ sem\ nome.png);
+    background-position: center;
+    background-size: cover; 
 }
 
 h1{
@@ -39,17 +43,18 @@ button:hover{
 .title{
     margin-top: -40px;
     margin-bottom: 20px;
-    font-size: 50px;
+    font-size: 40px;
 
     & span {
-        color: rgb(219, 80, 80);
+        color: #db5050;
     }
 }
 
-#logo{    
+#logo{
+    margin-top: 50px;
     width: 100%;
     height: 100%;
-    max-width: 370px;
+    max-width: 250px;
     z-index: 0;
 }
 
@@ -68,7 +73,6 @@ nav{
     align-items: center;
     width: 100%;
     padding: 15px 0px 15px 0px;
-    background-color: rgb(219, 80, 80);
     z-index: 1;
 
     & h1{
@@ -79,19 +83,19 @@ nav{
 
 #container{
     display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
     width: 100%;
     padding: 10px;
     max-width: 680px;
-    
 }
 
 #containerPergunta{
     display: flex;
     flex-direction: row;
     gap: 10px;
-    margin-top: 10px;
+    
 }
 
 #containerReset{
@@ -102,10 +106,29 @@ nav{
     background-color: lightgrey;
 }
 
+#botaoReset{
+    text-decoration: none;
+    background-color: #641ED9;
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+#pergunta{
+    width: 100%;
+    max-width: 400px;
+    margin-bottom: 5px;
+    text-align: center;
+}
+
+input{
+    padding: 5px;
+}
+
 footer{
-    margin-top: 100px;
+    margin-top: 110px;
     width: 100%;
     text-align: center;
-    background-color: rgb(219, 80, 80);
     color: white;
 }
